update per build failure

--- a/hive3-orc-bundle/build.gradle
+++ b/hive3-orc-bundle/build.gradle
@@ -44,6 +44,9 @@ project(':iceberg-hive3-orc-bundle') {
 
     zip64 true
 
+    exclude 'META-INF/versions/21/**'
+    exclude 'META-INF/versions/22/**'
+
     // include the LICENSE and NOTICE files for the shaded Jar
     from(projectDir) {
       include 'LICENSE'
